crates/runtime/tests/models/snapshots/integration_models__models__search__test_text_search_sql_where_rowid_is_search_column_composite_pk_basic.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 525,
    "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]",
    "trunc(text_search(qs, Utf8(\"second\"))._score,Int64(2))": 6.331
  },
  {
    "id": 772,
    "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\).",
    "trunc(text_search(qs, Utf8(\"second\"))._score,Int64(2))": 6.192
  }
]
