crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_keywords_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp, round_scores)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": []
}
