crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_answer.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 9,
    "answer": "The statement \"T minus 50 seconds\" indicates that there are $\\boxed{50 \\text{ seconds}}$ remaining until lift-off.",
    "trunc(text_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 8.215
  },
  {
    "id": 525,
    "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]",
    "trunc(text_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 5.991
  },
  {
    "id": 772,
    "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\).",
    "trunc(text_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 5.86
  }
]
