crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_answer_w_question.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 9,
    "question": "A Mission Control Officer at Cape Canaveral makes the statement \"lift-off, T minus 50 seconds.\" How long is it before lift-off?",
    "trunc(text_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 8.215
  },
  {
    "id": 525,
    "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?",
    "trunc(text_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 5.991
  },
  {
    "id": 772,
    "question": "State the degree of the differential equation:\n$$\ny^{\\prime \\prime} = 6x + \\sin x\n$$",
    "trunc(text_search(qs, Utf8(\"second\"), answer)._score,Int64(3))": 5.86
  }
]
