crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_metadata_sql_text_search_answer_w_question_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, question, trunc(_score, 3) FROM text_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
|               |       ProjectionExec: expr=[id@0 as id, question@1 as question, trunc(_score@2, 3) as trunc(text_search(qs, Utf8("second"), answer)._score,Int64(3)), _score@2 as _score]                                                     |
|               |         CooperativeExec                                                                                                                                                                                                       |
|               |           BytesProcessedExec                                                                                                                                                                                                  |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                              |
|               |               FullTextSearchTableExec q=second                                                                                                                                                                                |
|               |                                                                                                                                                                                                                               |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
